# AAI_CodeMentor

./: .gitignore  feedback.md  last_run.json  main.py  pyproject.toml  server.py
.codementor/rag/: chroma.sqlite3
.github/workflows/: ci.yml
mocks/: mock_ci_errors.json  mock_copilot_review.json  mock_feedback_output.json  mock_pr.json
src/codementor/: __init__.py  config.py  graph.py  llm.py  mock_loader.py  models.py  state.py
src/codementor/agents/: __init__.py  context_processor.py  dev_mentor.py  learning.py  reflection.py
src/codementor/ci/: __init__.py  findings.py  parse_mypy.py  parse_pytest.py  parse_ruff.py
src/codementor/github/: __init__.py  actions.py  artifacts.py  client.py  copilot.py
src/codementor/rag/: __init__.py  embeddings.py  indexer.py  retriever.py  sources.py
src/codementor/static/: index.html
src/codementor/tools/: __init__.py  ci_tools.py  github_tools.py
src/team_codementor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_ci_parsers.py  test_cli_github_mode.py  test_copilot_reviews.py  test_dev_mentor_agent.py  test_github_client.py  test_graph_github_mode.py  test_graph_mock.py  test_learning_agent.py  test_rag_retriever.py  test_reflection_agent.py
