[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "team-codementor"
version = "0.1.0"
description = "Sprint 1 mock implementation for Team CodeMentor."
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "pydantic>=2.7",
    "httpx>=0.27",
    "chromadb>=0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q -p no:cacheprovider"
pythonpath = ["src"]
testpaths = ["tests"]
